# wgQuake

./: .clang-format  .gitignore  CMakeLists.txt  config_default.cfg  history.txt  include_shader.py  main.c  readme.md  shader.h  shader.wgsl  web.sh  wgpu_app.c  wgpu_app.h  wgpu_utils.c  wgpu_utils.h
Quake/: arch_def.h  bgmusic.c  bgmusic.h  bspfile.h  cd_null.c  cd_sdl.c  cfgfile.c  cfgfile.h  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  default_cfg.h  draw.h  filenames.h  gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_shaders.c  gl_shaders.h  gl_sky.c  (+105 more)
id1/: config.cfg  ironwail.cfg
sdl2webgpu/: CMakeLists.txt  sdl2webgpu.c
shaders/inc/: empty.wgsl.h
